Fix #3 code scanning alert - Building a command line with string concatenation